[project]
name = "attome_s3"
description = "Custom nodes for ComfyUI enabling seamless loading and saving of media files (images, videos, audio, text) directly from/to AWS S3 or S3-compatible storage services."
version = "1.0.0"
license = {file = "LICENSE"} 
 classifiers = [
     # For OS-independent nodes (works on all operating systems)
     "Operating System :: OS Independent",

     # OR for OS-specific nodes, specify the supported systems:
     #"Operating System :: Microsoft :: Windows",  # Windows specific
     #"Operating System :: POSIX :: Linux",  # Linux specific
     #"Operating System :: MacOS",  # macOS specific

     # GPU Accelerator support. Pick the ones that are supported by your extension.
     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
     "Environment :: GPU :: Intel Arc",      # Intel Arc support
     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
     "Environment :: GPU :: Apple Metal",    # Apple Metal support
 ]

dependencies = ["boto3>=1.26.0", "Pillow>=9.0.0", "torch>=1.12.0", "numpy>=1.21.0", "torchaudio>=0.12.0", "opencv-python>=4.5.0"]

[project.urls]
Repository = "https://github.com/attome-ai/Comfyui_Attome_S3"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/attome-ai/Comfyui_Attome_S3/wiki"
"Bug Tracker" = "https://github.com/attome-ai/Comfyui_Attome_S3/issues"

[tool.comfy]
PublisherId = "attome"
DisplayName = "Comfyui_Attome_S3"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

